fixed font readability

--- a/src/app/components/question/question.component.scss
+++ b/src/app/components/question/question.component.scss
@@ -15,6 +15,7 @@
 .question-title {
     margin-bottom: 0;
     margin-top: 20px;
+    font-weight: 500;
 }
 .question.blur {
     filter: blur(5px);
